--- a/code/style.css
+++ b/code/style.css
@@ -3,14 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 html {
   color: #000000;
   margin: 10px;
   font-size: 17px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
 .dropdownlogo{
   display:flex;
   width: 70%;
@@ -26,14 +24,12 @@ html {
   border: none;
   cursor: pointer;
 }
-
 .dropdown {
   position: relative;
   display: inline-block;
   margin-top: 20px;
-    margin-right: 5px;
+  margin-right: 5px;
 }
-
 .dropdown-content {
   display: none;
   position: absolute;
@@ -43,46 +39,38 @@ html {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   font-size: initial;
-
 }
-
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
-
-.dropdown-content a:hover {background-color: #f1f1f1;}
-
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
 .dropdown:hover .dropbtn {
   background-color: #3e8e41;
 }
-
 .tabanddesktopmenu{
   display: none;
  }
-
 header img{
   width: 50px;
   height: 50px;
  }
-
 header{
   margin: 20px 5px 25px 10px;
   font-size: 25px;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: #1267b6;
 }
-
 .item2 {
   margin-left: 20px;
   margin-top: 10px;
-
   animation-duration: 3s;
   animation-name: slidein;
   animation-iteration-count: infinite;
@@ -94,17 +82,14 @@ header{
     margin-left: 15%;
     width: 300%;
   }
-
   to {
     margin-left: 0%;
     width: 100%;
   }
 }
-
 header a{
   display: none;  
  }
-
 a {
   text-decoration: none;  
   color: #1267b6;
@@ -114,7 +99,6 @@ a {
 }
 .polaroid:hover {
 box-shadow: 0 0 2px 1px #008cba80;
-
 }
 .polaroid p{
   text-align: center;
@@ -124,21 +108,17 @@ box-shadow: 0 0 2px 1px #008cba80;
   color: #008cba80;
 }
 /*section*/
-
 section{
   text-align: center;
 }
-
 .big-news{
   text-align: left;
   margin: 15px 5px 2px 5px;
 }
-
 .big-news img{
   width: 100%;
   height: 100%;
 }
-
 .big-news img:hover{
   transform: scaleX(-1);
 }
@@ -146,7 +126,6 @@ section{
   width: 100%;
   height: 100%;
 }
-
 .mainText img:hover{
   transform: scaleX(-1);
 }
@@ -155,7 +134,6 @@ section h1{
   font-size: 25px;
   font-weight: 400;
 }
-
 section p{
   text-align: justify;
   line-height: 1.8;
@@ -166,13 +144,12 @@ section p{
 }
 
 /*for tablet*/
-
 @media screen and (min-width: 768px) {
   .mobilemenu{display: none;}
   .tabanddesktopmenu{
     display: grid;
+    font-size: 16px;
    }
-
   .item1 { grid-area: logo; }
   .item2 { grid-area: txtTitle;
   display: none;}
@@ -187,23 +164,43 @@ section p{
       'link1 link2 logo link3 link4';
     grid-gap: 10px;
   }
-
    header a{
     display: flex; 
     color: #1267b6; 
    }
-   
    header a:hover{ 
     color: #EF4022; 
     text-decoration: overline;
    }
 
 /*section*/
-
-
 section h1{
   margin-top: 35px;
+
+  animation-duration: 6s;
+  animation-name: slidein;
 }
+
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  75% {
+    font-size: 300%;
+    margin-left: 25%;
+    width: 150%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+
 
 .mainText{
   display: grid;
@@ -217,13 +214,10 @@ section p{
   font-size: 20px;
   padding: 5px;
 }
-
 }
 
 /*for desktop*/
-
 @media screen and (min-width: 992px) {
-
   .item2 { 
     display:grid;
     margin-left: -40px;
@@ -240,9 +234,7 @@ section p{
     grid-gap: 10px;
     justify-items: right;
     font-size: 15px;
-    
   }
- 
 .mainText{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -250,12 +242,10 @@ section p{
   grid-column-gap: 35px;
   grid-row-gap: 30px;
 }
-
 .big-news{
   display: grid;
   grid-template-columns: 40% 60%;
   grid-column-gap: 30px;
   margin-bottom: 40px;
 }
-
 }
