--- a/code/style.css
+++ b/code/style.css
@@ -14,24 +14,25 @@ margin: 0px;
 span{
   font-size: 15px;
 }
+
 /* rules for the header */
 header{
   border: solid;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /* background-color: darkseagreen; */
+  width: 100%;
 }
 
 .logo{
-  /* border: solid; */
   height: 70px;
   width: 80px;
-  justify-self: end;
-  align-self: center;
+  justify-self: flex-end;
+  /* align-self: center; */
 }
 
 ul{
-  /* border: solid; */
   list-style: none;
   justify-self: start;
 }
@@ -40,8 +41,12 @@ a{
   color: black;
   text-decoration: none;
 }
-/* meda rule to dissapear the sitename in header when shown in mobile */
-@media (max-width:668px){
+
+a:hover {
+color: tomato;
+}
+/* meda rule to dissapear the site name in header when shown in mobile */
+@media (max-width:767px){
   .site-name{
     display:none;
   }
@@ -49,7 +54,7 @@ a{
 
 /* media rule to make navbar into a row when shown on screen */
 
-@media (min-width: 1000px){ 
+@media (min-width: 992px){ 
   ul{display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -65,42 +70,30 @@ a{
 }
 
 /* ------------------------------------------------------------- */
-/* rules for the maine section with a news article. 1 column in mobile,
+/* rules for the main section with a news article. 1 column in mobile,
 2 columns on tablet and screen*/
 
 .big-news{
   display: flex;
-  /* border: solid; */
-  text-align: center;
-  /* background-color: blue; */
-  
+  text-align: center; 
 }
 
 .article-heading{
-  /* border: solid; */
   text-align: left;
   margin: 0% 3%;
-  /* flex-wrap: nowrap; */
-  /* background-color: cyan; */
 }
 
 .article{
-  /* border: solid; */
   text-align: left;
   margin: 0% 3%;
-  /* background-color: blueviolet; */
-  /* justify-content: center; */
   }
 
-  .main-content-img{
-    /* height: 90%; */
-    /* width: 90%; */
+.main-content-img{
     justify-content: center;
-    /* margin: 20px; */
 }
 
   /* rules for main article in tablet and screen  */
-@media (min-width:668px){
+@media (min-width:768px){
 
   .main-content-container{
     display: flex;
@@ -112,11 +105,6 @@ a{
     max-width: 100%;
   }
 
-/* .main-content{ */
-  /* flex-direction: row; */
-  /* flex-wrap: nowrap; */
-  }
-}
 .main-content-img{
   width: 40%;
 }  
@@ -134,70 +122,67 @@ a{
   margin-top: 12%;
 }
   /*---------------------------------------------------------------  */
-  /* code for the news grid. tablet: 2 columns, 2 rows. screen: 1 row. */
+  /* code for the news grid. tablet: 2 columns, 2 rows. desktop: 1 row. */
 
-  .news-grid{ 
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  /* rules for mobile */
+/* @media (min-width: 0) and (max-width: 767px) { */
+
+  /* .news-grid{  */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* flex-direction: column; */
+  /* border: solid; */
+/* } */
+
+/* .grid-img{ */
+  /* height: 90%; */
+  /* width: 90%; */
+  /* margin: 2px 20px; */
+  /* justify-content: center; */
+/* } */
+
+/* .news-grid-item{ */
+  /* display: flex; */
+  /* text-align: center; */
+  /* flex-direction: column; */
 }
 
-.grid-img{
-  height: 90%;
-  width: 90%;
-  margin: 2px 20px;
-  justify-content: center;
-}
+/* .news-grid-heading{ */
+  /* text-align: center; */
+  /* margin: 3% 20%; */
+/* } */
+/* } */
 
-.news-grid-part1 .news-grid-part2
-.news-grid-part3 .news-grid-part4{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
- }
-
-.news-grid-part1-heading .news-grid-part2-heading
-.news-grid-part3-heading .news-grid-part4-heading{
-  text-align: left;
-  margin: 3% 20%;
+.news-grid-heading:hover{
+color: tomato;
 }
 
 /* rules for tablet */
-@media (min-width: 668px) and (max-width: 1024px){
+@media (min-width: 768px) and (max-width: 991px){
   .news-grid{
     display: grid;
     grid-template-columns: 50% 50%;
+    gap: 1%;
+    margin: 2%;
   }
-  
-.news-grid-part1{
-  display: flex;
-  flex-direction: column;
-}
-.news-grid-part2{
-  display: flex;
-  flex-direction: column;
-}
-.news-grid-part3{
-  display: flex;
-  flex-direction: column;
-}
-.news-grid-part4{
-  display: flex;
-  flex-direction: column;
+ 
+  .news-grid-item{
+    display: flex;
+    flex-direction: column;
+  }
 }
 
-/* ruls for screen */
- @media (min-width: 1025px){ 
-      .news-grid{
-        display: grid;
-        grid-template-columns: 25% 25% 25% 25%;
-        /* flex-direction: row; */
-      }
-       /* .grid-img{  */
-        /* width: 20%; */
-        }
+/* rules for desktop */
 
-
+@media (min-width: 992px) {
+.news-grid{
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  gap: 1%;
+  margin: 2%;
 }
-        
+.news-grid-item{
+  display: flex;
+  flex-direction: column;
+}
 }
