with mediaquieries and pics

--- a/code/style.css
+++ b/code/style.css
@@ -1,17 +1,43 @@
-
-
-section img{ width:100%;height:500px;}
-header{ margin: 20px; display:flex; justify-content:space-between; align-items:center; font-family: 'Courier New', Courier, monospace; font-size: 20px; color:black;}
-
-img{height: 40px;}
-.logoandtext{display: flex; align-items: center;}
-a{text-decoration: none; color:black; padding: 0 20px;}
-
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-body{margin:0 0; }
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bebas+Neue&family=Shadows+Into+Light&display=swap');
+body{margin:0 0; font-family: 'Bebas Neue', cursive;}
 .main{width: 80%; margin:auto}
 
-h1{margin: 0 0; font-family: 'Anton', sans-serif; font-size: 3.5vw;}
+.backgroundgif{ width:100%;height:400px;}
+header{ margin: 5px; display:flex; justify-content:space-between; align-items:center; font-size: 30px;}
+
+.logo {
+  height: 40px;
+  width: auto;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logoandtext {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.links {
+  display: flex;
+}
+
+.logo-hidden {
+  display: none;
+}
+
+a{text-decoration: none; color: black; padding: 10px; font-size:30px}
+a:hover {
+  background-color:  rgb(130, 141, 151);
+}
+
+
+
+h1{margin: 0 0;  font-size: 3.5vw; color: whitesmoke;}
 
 
 .big-news {
@@ -20,25 +46,28 @@ h1{margin: 0 0; font-family: 'Anton', sans-serif; font-size: 3.5vw;}
   grid-gap: 0px;
   margin-top:80px;
   margin-bottom:150px;
-  border-bottom: 2px solid black;
-  padding-bottom: 50px;
+
+  justify-items:center;
+  align-items:center;
+  background-color: rgb(130, 141, 151);
+  
 }
 
-.gallerypic{width:100%; object-fit:cover;}
-.gallerypic:hover{
-	opacity: .5;
-}
+.bignewspics{width: 100%;}
 
 
-.gallery__img {
- width:100%; height:auto;
- object-fit: cover;
+
+.galleryimg {
+ width:100%; height: auto;
+ object-fit: contain;
 }
 
 .newsgrid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     margin-bottom: 80px;
+    justify-items: center;
+ 
      }
 
  figcaption{font-size:40px;}
@@ -46,14 +75,16 @@ h1{margin: 0 0; font-family: 'Anton', sans-serif; font-size: 3.5vw;}
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;}
   .pol:hover{opacity: .5;}
+  h3{font-family: 'Shadows Into Light', cursive;}
 
   @media only screen and (max-width: 600px) {
      
 
-  body{background-color: tomato;}
+  
   a {display:none;}
   h2{display:none;}
-  header{justify-content: center;}
+  .logoandtext{justify-content: center;}
+
   h1{font-size: 25px; margin:0;}
 
   .big-news {
@@ -63,7 +94,6 @@ h1{margin: 0 0; font-family: 'Anton', sans-serif; font-size: 3.5vw;}
     grid-gap: 0px;
     margin-top:30px;
     margin-bottom:20px;
-    border-bottom: 2px solid black;
     padding-bottom: 50px;
   }
 
@@ -92,6 +122,28 @@ h1{margin: 0 0; font-family: 'Anton', sans-serif; font-size: 3.5vw;}
     margin-bottom: 40px;
      }
 
+    }
+    @media only screen and (min-device-width: 768px)
+and (max-device-width: 1024px){
 
-   h2{font-size: 15px;}
-}  
+  .navbar {
+    justify-content: space-evenly;
+  }
+
+  .links {
+    justify-content: space-evenly;
+  }
+
+  .logoandtext {
+    display: none;
+  }
+
+  .logo-hidden {
+    display: inline-block; height: 40px;
+  }
+  
+
+  }
+
+
+     
