--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,30 +4,11 @@
     --fw-reg: 400;
     --fw-bold: 600;
     --fw-bolder: 800;
-    --clr-primary: #9239A2;
     --clr-light: #fff;
     --clr-dark: #000;
     --fs-h1: 3rem;
     --fs-h2: 2rem;
     --fs-body: 1.5rem;
-}
-
-body {
-  font-family: var(--ff-primary);
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  height: 80px;
-  background-color: var(--clr-dark);
-  opacity: 0.9;
-  z-index: 2;
-  width: 100%;
-  font-family: var(--ff-secondary);
-  margin: 0 auto;
 }
 
 .header__heading,
@@ -40,8 +21,60 @@ body {
   font-size: var(--fs-h1);
 }
 
-.header__heading-desktop {
+.header__heading-desktop,
+.navbar-toggle {
   display: none;
+}
+
+.header,
+.navbar__list,
+.section,
+.footer {
+  display: flex;
+}
+
+.header,
+.navbar__list {
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header,
+.footer {
+  width: 100%;
+  font-family: var(--ff-secondary);
+}
+
+.navbar__link,
+.footer {
+  color: var(--clr-light);
+}
+
+.hamburger,
+.section__text {
+  display: block;
+}
+
+.section__header,
+.article__header {
+  margin-bottom: 16px;
+}
+
+.footer__link,
+.footer__link-header {
+  margin-bottom: 8px;
+}
+
+body {
+  font-family: var(--ff-primary);
+}
+
+.header {
+  position: fixed;
+  height: 80px;
+  background-color: var(--clr-dark);
+  z-index: 2;
+  margin: 0 auto 60px auto;
 }
 
 .navbar {
@@ -49,7 +82,6 @@ body {
 }
 
 .navbar__link {
-  color: var(--clr-light);
   text-align: center;
   padding: 14px 16px;
   font-size: 1.25rem;
@@ -58,23 +90,18 @@ body {
 }
 
 .navbar__link:hover {
-  color: var(--clr-primary);
+  color: #9f46af;
 }
 
-.navbar-toggle {
-  display: none;  
+.navbar-toggle { 
   margin-right: 24px;
 }
 
 .navbar__list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   margin-right: 15px;
 }
 
 .hamburger {
-  display: block;
   width: 24px;
   height: 3px;
   margin: 5px auto;
@@ -89,12 +116,7 @@ body {
 }
 
 .section {
-  display: flex;
   flex-direction: column;
-}
-
-.section__header {
-  margin-bottom: 15px;
 }
 
 .section__image {
@@ -102,7 +124,6 @@ body {
 }
 
 .section__text {
-  display: block;
   margin: 15px 5px 50px 10px;
 }
 
@@ -117,28 +138,20 @@ body {
   border-radius: 5px;
 }
 
-.article__header {
-  margin-bottom: 16px;
-}
-
 .article__text {
   padding: 10px 14px 30px 14px;
 }
 
 .article__image {
-  aspect-ratio: 1 / 1;
   width: 100%;
+  aspect-ratio: 1 / 1;
   object-fit: cover;
 }
 
 .footer {
   background-color: rgb(39, 39, 39);
-  color: var(--clr-light);
   padding: 35px 30px;
-  width: 100%;
   margin-top: 96px;
-  font-family: var(--ff-secondary);
-  display: flex;
   justify-content: center;
 }
 
@@ -152,13 +165,11 @@ body {
 
 .footer__link {
   font-weight: 300;
-  margin-bottom: 8px;
   color: rgb(218, 218, 218);
 }
 
 .footer__link-header {
   font-size: var(--fs-body);
-  margin-bottom: 8px;
 }
 
 .footer__link:hover {
@@ -166,7 +177,7 @@ body {
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 666px) {
   .navbar__list {
     position: fixed;
     left: -100%;
@@ -235,11 +246,6 @@ body {
   .header__heading-desktop {
     display: inline-block;
   }
- 
-  .section__text {
-    height: 200px;
-    margin: 0;
-  }
 
   .section {
     position: relative;
@@ -250,14 +256,20 @@ body {
      padding: 0 10px;
   }
 
+  .section__text,
+  .section__paragraph {
+    font-size: var(--fs-body);
+  }
+
   .section__text {
     z-index: 1;
     position: absolute;
-    font-size: var(--fs-body);
     font-weight: bold;
     bottom: 0;
     background-color: rgba(255,255,255,.8);
     width: 100%;
+    height: 200px;
+    margin: 0;
   } 
 
   .section__header {
@@ -267,7 +279,6 @@ body {
 
   .section__paragraph {
     margin-bottom: 24px;
-    font-size: var(--fs-body);
     font-weight: 500;
   }
 
