--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,108 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #fffefe;
+  color: rgb(0, 0, 0);
+  font-family: "Montserrat", sans-serif;
+}
+
+body {
+  margin: 0;
+  min-height: 200vh;
+}
+
+
+/* Header with logo and soc-med links in fullscreen and only "CNN" on small screen*/
+.CNN {
+  text-decoration: none;
+  text-align: center;
+  padding-left: 0.5rem;
+  font-size: 3em;
+  font-weight: 900;
+  text-shadow: 5px 5px rgb(194, 194, 194);
+  min-height: 4rem;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+
+/*Covid virus logo*/
+.logo-imgs {
+  display: none;
+  height: 6rem;
+}
+
+.logo {
+  height: 6rem;
+}
+
+.logo1 {
+  position: relative;
+}
+
+.logo2 {
+  position: absolute;
+  opacity: 0;
+}
+
+.logo2:hover {
+  animation: fadein 1s ease-in alternate infinite;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+
+/*links to soc-med*/
+.soc-med {
+  display: none;
+  align-items: center;
+  gap: 1rem;
+}
+
+/* News ticker */
+.black-stripe {
+  background-color: #000000;
+  height: 1.5em;
+  color: white;
+  font-weight: 900;
+  line-height: 100%;
+  text-align: right;
+}
+
+/* Navbar with links to categories*/
+.navbar {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.nav-links {
+  color: black;
+  font-size: 4vw;
+  padding: 0.5rem;
+  max-width: max-content;
+}
+
+
+/* Changes header to flex container for larger screens 
+    makes virus logo and soc-med links visible on large screens*/
+@media (min-width: 1025px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr 1fr; */
+  }
+
+  .logo-imgs {
+    display: block;
+  }
+
+  .soc-med {
+    display: block;
+  }
 }
