this is the right one now for publish

--- a/code/style.css
+++ b/code/style.css
@@ -51,6 +51,7 @@
   h1 {
     font-family: 'Righteous', cursive;
     font-size: 60px;
+    color: rgb(190, 229, 255);
     margin-bottom: 0;
     padding-top: 0;
   }
