Took away resposive to firefox and made the card text smaller insted

--- a/code/style.css
+++ b/code/style.css
@@ -228,12 +228,12 @@ li {
   }
 
   /* RESPONSIVE TO FIREFOX */
-  @-moz-document url-prefix() {
+  /* @-moz-document url-prefix() {
     .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p,
   .card1:focus p, .card2:focus p, .card3:focus p, .card4:focus p, .card5:focus p, .card6:focus p, .card7:focus p, .card8:focus p {
       width: 75%;
     }
-  }  
+  }   */
 }
 
 
@@ -282,12 +282,12 @@ li {
 
     /* RESPONSIVE TO FIREFOX */ 
 
-    @-moz-document url-prefix() {
+    /* @-moz-document url-prefix() {
       .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p,
     .card1:focus p, .card2:focus p, .card3:focus p, .card4:focus p, .card5:focus p, .card6:focus p, .card7:focus p, .card8:focus p {
         width: 40%;
       }
-    }  
+    }   */
   }
   
 
@@ -306,13 +306,13 @@ li {
 
  
   /* RESPONSIVE TO FIREFOX */
-    @-moz-document url-prefix() {
+    /* @-moz-document url-prefix() {
       .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p,
     .card1:focus p, .card2:focus p, .card3:focus p, .card4:focus p, .card5:focus p, .card6:focus p, .card7:focus p, .card8:focus p {
         width: 20%;
         line-height: 25px;
       }
-    }
+    } */
 }
 
 /*FOOTER*/
