--- a/code/style.css
+++ b/code/style.css
@@ -15,7 +15,7 @@ body {
   text-decoration: none;
   text-align: center;
   padding-left: 0.5rem;
-  font-size: 3em;
+  font-size: 3.5em;
   font-weight: 900;
   text-shadow: 5px 5px rgb(194, 194, 194);
   min-height: 4rem;
@@ -81,11 +81,76 @@ a {
 
 .nav-links {
   color: black;
-  font-size: 4vw;
+  font-size: min(2rem, 4vw);
   padding: 0.5rem;
   max-width: max-content;
+  font-weight: 500;
 }
 
+.nav-links:hover {
+  color: red;
+}
+
+h1 {
+  font-size: 4rem;
+  text-align: center;
+  text-decoration: overline underline;
+  margin: 1rem;
+  padding: 2rem;
+}
+
+.big-news {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  /* margin: 1rem 0;
+  max-width: 95vw;
+  max-height: 50rem;
+  gap: 20px; */
+}
+
+.big-pic {
+  max-height: 100vw;
+}
+
+.big-news-text {
+  text-align: center;
+  padding: 10px;
+  font-size: 1.3rem;
+}
+
+.cards {
+  background: rgb(240, 239, 239);
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  /* margin: 20px; */
+}
+
+.card {
+  background: rgb(253, 253, 253);
+  /* display: grid; */
+  /* grid-template-rows: 5% 45% 50%; */
+  /* grid-template-rows: 1fr 4fr 5fr; */
+  /* grid-template-rows: fit-content(8ch) fit-content(8ch) 1fr; */
+  margin: 1rem;
+  max-width: min(100vw, 400px);
+  /* max-height: auto; */
+  max-height: 25rem;
+  /* max-height: 30vh; */
+  /* max-height: min-content; */
+  box-shadow: 0px -2px 20px 2px rgba(0, 0, 0, 0.4);
+  /* background: rgb(255, 255, 255); */
+  transition: 400ms;
+}
+
+.card-pic {
+  max-width: calc(100vw - 2rem);
+}
+
+.hide {
+  display: none;
+}
 
 /* Changes header to flex container for larger screens 
     makes virus logo and soc-med links visible on large screens*/
@@ -105,4 +170,9 @@ a {
   .soc-med {
     display: block;
   }
+}
+
+
+.expand {
+  max-height: 40rem;
 }
