Last color change

--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,7 @@
 
 body {
   background: linear-gradient(to bottom right, #F6EABE, 
-  #FDA65D, #ff8741);
+  #FDA65D, #FFA810);
   font-family: 'Montserrat', sans-serif;
   font-weight: 400; 
 }
