--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,222 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: whitesmoke;
+  background: linear-gradient();
+  font-family: Noto sans, sans-serif;
+  margin: 0;
+}
+
+header {
+  background-color: rgba(11, 122, 173, 0.904);
+  width: 100%;
+  height: 8em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em 2em;
+  box-sizing: border-box;
+}
+
+.container-with-logo-and-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
+}
+
+.logo {
+  width: 4.5rem;
+  height: 4.5rem;
+  border-radius: 50%;
+}
+
+p, h1, h2 {
+  color: rgba(21, 3, 37, 0.692);
+}
+
+.hamburger-nav-mobile {
+  margin-top: 2.5em;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+#dropdown-menu {
+  transition: transform 0.3s;
+  transform-origin: top;
+}
+
+input:not(:checked) ~ #dropdown-menu {
+  transform: scaleY(0);
+}
+
+#menu-label {
+  float: right;
+}
+
+.fa-bars {
+  color: white;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.navbar-tablet-desktop a {
+  text-decoration: none;
+  color: rgba(29, 18, 39, 0.24);
+}
+
+.big-news-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.big-news-image {
+  width: 90%;
+  margin-top: 1.5em;
+  border-radius: 5px;;
+  box-shadow: 2px 2px 4px 3px rgba(0,0,0,.1);
+}
+
+.big-text-tablet-desktop {
+  display: flex;
+  width: 50%;
+  background-color: rgb(238, 207, 207);
+  border-radius: 5px;
+  margin: 1em 1em 1em 0;
+  padding: 2em;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.big-text-mobile {
+  margin: 0 2em;
+}
+
+#check-news {
+  display: none;
+}
+
+.additional-content {
+  display: none;
+  transition: 0.5s linear;
+}
+
+label {
+  display: inline-block;
+  color: rgba(226, 117, 135, 0.911);
+  text-decoration: underline;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+#check-news:checked ~ .additional-content {
+  display: block;
+}
+
+#check-news:checked ~ label {
+  visibility: hidden;
+}
+
+#check-news:checked ~ label:after {
+  content: "Show Less";
+  display: block;
+  visibility: visible;
+}
+
+.container-other-news {
+  gap: 1em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(290px,1fr));
+  grid-template-rows: 4, 1fr;
+  justify-items: center;
+}
+
+.small-news {
+  display: block;
+  justify-content: center;
+  padding: 0.5em;
+}
+
+.small-news-picture {
+  display: block;
+  width: 100%;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px 3px rgba(0,0,0,.1);
+}
+
+.page-bottom {
+  background-color: powderblue;
+  margin: 0;
+  padding: 2em;
+  text-align: center;
+  font-size: 20px;
+}
+
+a:link a:visited {
+  text-decoration: none;
+  color: rgb(11, 94, 11);
+}
+
+a:hover, a:active {
+  text-decoration: none;
+  color:rgba(11, 122, 173, 0.938);
+}
+
+/* mobile */
+
+@media (max-width: 667px) {
+  .navbar-tablet-desktop {
+    display: none;
+  }
+  .big-text-tablet-desktop {
+    display: none;
+  }
+  .container-other-news {
+    margin: 1em 1em;
+  }
+}
+
+/* tablet */
+
+@media (min-width: 668px) {
+  header {
+    padding: 5em 3em;
+  }
+  .hamburger-nav-mobile {
+    display: none;
+  }
+  .big-news-image {
+    width: 50%;
+    margin: 1.5em;
+  }
+  .big-text-mobile {
+    display: none;
+  }
+  .container-other-news {
+    padding: 2em;
+    margin: 0 2em;
+  }
+}
+
+/* desktop */
+
+@media (min-width: 1024px) {
+  header {
+    height: 10em;
+    padding: 1em 2em;
+  }
+  .big-text-tablet-desktop {
+    font-size: 1.5rem;
+  }
+  .container-other-news {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+  }
 }
